ingress-monitoring.yml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-rules
  namespace: monitoring
spec:
  rules:
  - host: prom.anup.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090
  - host: alert.anup.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-main	
          servicePort: 9093
  - host: grafana.anup.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
